istio-config/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: smartorder
  labels:
    istio-injection: enabled
