istio-config/destinationrule-aiops.yaml
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: aiops
  namespace: smartorder
spec:
  host: aiops.smartorder.svc.cluster.local
  trafficPolicy:
    loadBalancer:
      simple: ROUND_ROBIN
