istio-config/destinationrule-order.yaml
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: order
  namespace: smartorder
spec:
  host: order.smartorder.svc.cluster.local
  trafficPolicy:
    loadBalancer:
      simple: ROUND_ROBIN
