istio-config/service-entry-order-validation.yaml
apiVersion: networking.istio.io/v1beta1
kind: ServiceEntry
metadata:
  name: order-validation-external
  namespace: smartorder
spec:
  hosts:
    - host.docker.internal
  location: MESH_EXTERNAL
  ports:
    - number: 8081
      name: http
      protocol: HTTP
  resolution: DNS
