istio-config/virtual-service-gateway.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: smartorder-gateway-vs
  namespace: smartorder
spec:
  hosts:
    - "*"
  gateways:
    - smartorder-gateway
  http:
    - match:
        - uri:
            prefix: /orders
      route:
        - destination:
            host: order.smartorder.svc.cluster.local
            port:
              number: 8082
    - match:
        - uri:
            prefix: /ai-ops
      route:
        - destination:
            host: aiops.smartorder.svc.cluster.local
            port:
              number: 8090
